# techno-econimic-stes-database

./: README.md  pyproject.toml
notebooks/: CAPEX_OPEX_database_STES.ipynb  Heat_Loss_Simulation_of_PTES.ipynb
src/stes_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/stes_tools/: H2O_prop.py  __init__.py  cost_functions.py  import_functions.py  loss_simulation.py
src/stes_tools/data/: STES_CAPEX_OPEX_database.xlsx  STES_CAPEX_data.csv  STES_OPEX_data.csv
